Ktlint's rules have changed